--- a/cpanel.yml
+++ b/cpanel.yml
@@ -2,7 +2,4 @@
 deployment:
   tasks:
     - export DEPLOYPATH=/home/julirpbo/public_html/
-    - /bin/cp -r * $DEPLOYPATH
-    - /bin/cp index.html $DEPLOYPATH
-    - /bin/cp style.css $DEPLOYPATH
-    - /bin/cp -R img $DEPLOYPATH
+    - /bin/cp * $DEPLOYPATH
