--- a/cpanel.yml
+++ b/cpanel.yml
@@ -3,3 +3,5 @@ deployment:
   tasks:
     - export DEPLOYPATH=/home/julirpbo/public_html/
     - /bin/cp * $DEPLOYPATH
+    - /bin/cp index.html $DEPLOYPATH
+    - /bin/cp style.css $DEPLOYPATH
